...
                    .padding(.top)
                Spacer()
                HStack {
                    SecondaryButton(label: "Eliminar") {
                        self.viewModel.showDeleteRecordAlert()
                    }
                    .accessibilityIdentifier("RecordDetailDeleteButton")
                    PrimaryButton(label: "Editar") {
                        self.viewModel.updateRecord()
                    }
                    .accessibilityIdentifier("RecordDetailEditButton")
                }.padding()
            }
...
