...
                    IconImage(.close, size: 16, color: .dark)
                }
            }
            Text("Nuevo registro")
                .font(.title(size: .large))
                .foregroundStyle(Color.dark)
                .accessibilityIdentifier("FormRecordTitle")
        }.padding(.horizontal)
    }

    @ViewBuilder
    private var Types: some View {
        ScrollView(.horizontal, showsIndicators: false) {
...
